k8s/labs/drone/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: drone
spec:
  serviceName: "postgres"
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:10.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    name: postgres
  namespace: drone
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      targetPort: 5432
      name: http
      port: 5432
