k8s/labs/drone/drone-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-server
  labels:
    app: drone-server
  namespace: drone
spec:
  selector:
    matchLabels:
      app: drone-server
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: drone-server
    spec:
      containers:
      - name: drone-server
        image: drone/drone:1.6.5
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        - containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: droneserver
  labels:
    app: drone-server
  namespace: drone
spec:
  type: NodePort
  selector:
    app: drone-server
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
      nodePort: 30080
    - protocol: TCP
      name: https
      port: 443
      targetPort: 443
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: drone-server
  namespace: drone
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: drone.dev
    http:
      paths:
      - backend:
          serviceName: droneserver
          servicePort: 80
        path: /
        pathType: Exact
